<resources>
    <string name="app_name">Task1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_wakey">Wakey</string>
    <string name="label_selection_title">Let’s get connected to wakey for healthy lifestyle</string>
    <string name="label_selection_desc">Explore the most elegant way of achieving your morning routine let’s build a healthy life.</string>
    <string name="label_signin">Sign In</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_hiithere">Hii There!!</string>
    <string name="label_welcomeback">Welcome back you’ve been missed!</string>
    <string name="hint_enter_username">Enter Username</string>
    <string name="hint_password">Password</string>
    <string name="label_recover_password">Recover Password?</string>
    <string name="label_dont_have_an_account">Don’t have an account?</string>
    <string name="label_or">or</string>
    <string name="label_welcometowakey">Welcome to wakey one stop solution for healthy life</string>
    <string name="hint_email">Email</string>
    <string name="label_terms"><![CDATA[By signing up you agree to Terms & conditions of Wakey app.]]></string>
</resources>